--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ aiogram = "3.6.0"
 python-dotenv = "^1.0.1"
 alembic = "^1.13.2"
 telethon = "^1.36.0"
+aiogram-widgets = "^1.2.7"
 
 
 [build-system]
