--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,30 @@
 aiofiles==23.2.1
-aiogram==3.11.0
-aiogram-dialog==2.1.0
-aiohappyeyeballs==2.3.5
-aiohttp==3.10.3
+aiogram==3.6.0
+aiogram-widgets==1.2.7
+aiohttp==3.9.5
 aiosignal==1.3.1
 alembic==1.13.2
 annotated-types==0.7.0
+asyncpg==0.29.0
 attrs==24.2.0
-black==24.8.0
-cachetools==5.4.0
 certifi==2024.7.4
-click==8.1.7
-coloredlogs==15.0.1
 frozenlist==1.4.1
 greenlet==3.0.3
-humanfriendly==10.0
-idna==3.7
-Jinja2==3.1.4
+idna==3.8
 magic-filter==1.0.12
 Mako==1.3.5
 MarkupSafe==2.1.5
 multidict==6.0.5
-mypy-extensions==1.0.0
-packaging==24.1
-pathspec==0.12.1
-platformdirs==4.2.2
+psycopg2-binary==2.9.9
 pyaes==1.6.1
 pyasn1==0.6.0
-pydantic==2.8.2
-pydantic_core==2.20.1
-PyQt5==5.15.11
-# PyQt5-Qt5==5.15.14
-PyQt5_sip==12.15.0
+pydantic==2.7.4
+pydantic_core==2.18.4
 PyQt6==6.7.1
 PyQt6-Qt6==6.7.2
 PyQt6_sip==13.8.0
-# PySide2==5.13.2
 python-dotenv==1.0.1
 rsa==4.9
-# shiboken2==5.13.2
 SQLAlchemy==2.0.32
 Telethon==1.36.0
 typing_extensions==4.12.2
