--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,30 @@ services:
       POSTGRES_USER: myuser
       POSTGRES_PASSWORD: mypassword
       POSTGRES_DB: mydatabase
-      POSTGRES_HOST: localhost
-      POSTGRES_PORT: 5432
     volumes:
       - pgdata:/var/lib/postgresql/data
     ports:
       - "5434:5432"
+
+  main_service:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: on-failure
+    working_dir: /SU_SOFT
+    command: python main.py
+    depends_on:
+      - db
+
+  nextgen_service:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: on-failure
+    working_dir: /SU_SOFT
+    command: python nextgen.py
+    depends_on:
+      - db
 
 volumes:
   pgdata:
