--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 API_ID=27046429
 API_HASH=27d8532a98a232d8339fe77418b7ef59
 BOT_KEY=5963841255:AAGfwJKvat72Vhq4uVUaZ9jyhsWJyOQ-sLE
-DB_TOKEN=postgresql+asyncpg://myuser:mypassword@localhost:5432/mydatabase
+DB_TOKEN=postgresql+asyncpg://myuser:mypassword@db:5432/mydatabase
+DB_TOKEN_LOCAL=postgresql+asyncpg://myuser:mypassword@localhost:5434/mydatabase
